--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Need some work done? Find a reputable handyman here</h1>
-<%= link_to "Sign up now!", "#" %>
+<div class="backgroundimage">
+	<div class="container">
+
+	<div class="jumbotron">
+	<h1 class="center">Need some work done? <h1>
+	<h2 class="center">Find a reputable handyman here</h2>
+	<%= link_to "Sign up now!", "#", class: "btn btn-large btn-primary" %>
+	</div>
+</div>
+
+</div>
