--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 	<div class="jumbotron">
 	<h1 class="center">Need some work done? <h1>
 	<h2 class="center">Find a reputable handyman here</h2>
-	<%= link_to "Sign up now!", "#", class: "btn btn-large btn-primary" %>
+	<div class="center_position"><%= link_to "Sign up now!", "#", class: "btn btn-large btn-primary" %></div>
 	</div>
 </div>
 
