--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,8 @@
 	<div class="panel panel-default">
 		
 		<div class="panel-heading">
-			<h1>Sign up</h1>
+
+			<h2>Sign up here</h2>
 		</div>
 
 <div class="panel-body">
@@ -29,11 +30,12 @@
   	<%= f.submit "Sign up" , class: "btn btn-primary" %>
   </div>
 <% end %>
+</div>
 	<div class="panel-footer">
 		<%= render "devise/shared/links" %>
 	</div>
 
 </div>
-</div>
+
 
 </div>
