--- a/app/views/contractors/show.html.erb
+++ b/app/views/contractors/show.html.erb
@@ -10,7 +10,8 @@
   <strong>Address:</strong>
   <%= @contractor.address %>
 </p>
-
+<% if @contractor_user == current_user %>
 <%= link_to 'Edit', edit_contractor_path(@contractor) %> |
+<% end %>
 <%= link_to 'Back', contractors_path %>
 </div>
