--- a/app/views/contractors/show.html.erb
+++ b/app/views/contractors/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 <p id="notice"><%= notice %></p>
+<%= image_tag @contractor.image.url(:medium) %>
 
 <p>
   <strong>Name:</strong>
